--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
     href="style.css"
   >
 
+  <script defer src="app.js" ></script>
+
   <title>Frontend Mentor | Interactive rating component</title>
 
 
@@ -43,28 +45,55 @@
 
   <!-- Rating state start -->
 
-  How did we do?
+<div id="cardRating" class="card ">
 
-  Please let us know how we did with your support request. All feedback is appreciated
-  to help us improve our offering!
+  <div class="container">
 
-  1 2 3 4 5
+    <span></span>
 
-  Submit
+    <h1 class="title">
+      How did we do?
+    </h1>
+    
+    <p class="article">
+
+      Please let us know how we did with your support request. All feedback is appreciated
+      to help us improve our offering!
+
+    </p>
+
+    <div class="rating-input">
+      1 2 3 4 5
+    </div>
+    
+    <div class="card__action">
+      <button id="submitButton">
+        Submit
+      </button>
+    </div>
+  </div>
+</div>
+  
 
   <!-- Rating state end -->
 
-  <!-- Thank you state start -->
+<div id="cardThanks" class="card hidden">
 
+  
+  <!-- Thank you state start -->
+  
   You selected
   <!-- Add rating here --> out of 5
-
+  
   Thank you!
-
+  
   We appreciate you taking the time to give a rating. If you ever need more support,
   don’t hesitate to get in touch!
-
+  
   <!-- Thank you state end -->
+  
+</div>
+
 
 
 </body>
