--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
   <div class="container">
 
-    <span></span>
+    <div class="icon-star"></div>
 
     <h1 class="title">
       How did we do?
@@ -62,8 +62,27 @@
 
     </p>
 
-    <div class="rating-input">
-      1 2 3 4 5
+    <div id="rating" class="rating-input">
+      <label>
+        <input type="radio" value="1" name="rating">
+        1
+      </label>
+      <label>
+        <input type="radio" value="2" name="rating">
+        2
+      </label>
+      <label>
+        <input type="radio" value="3" name="rating">
+        3
+      </label>
+      <label>
+        <input type="radio" value="4" name="rating">
+        4
+      </label>
+      <label>
+        <input type="radio" value="5" name="rating">
+        5
+      </label>
     </div>
     
     <div class="card__action">
