added html strcuture for thanks card

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <h1 class="title">
       How did we do?
     </h1>
-    
+
     <p class="article">
 
       Please let us know how we did with your support request. All feedback is appreciated
@@ -84,7 +84,7 @@
         5
       </label>
     </div>
-    
+
     <div class="card__action">
       <button id="submitButton">
         Submit
@@ -92,26 +92,32 @@
     </div>
   </div>
 </div>
-  
+
 
   <!-- Rating state end -->
 
-<div id="cardThanks" class="card hidden">
-
-  
   <!-- Thank you state start -->
-  
-  You selected
-  <!-- Add rating here --> out of 5
-  
-  Thank you!
-  
-  We appreciate you taking the time to give a rating. If you ever need more support,
-  don’t hesitate to get in touch!
-  
-  <!-- Thank you state end -->
-  
+<div id="cardThanks" class="card">
+
+  <div class="thanks-image"></div>
+
+  <div class="rating-show">
+    You selected <span id="submittedRating"> None </span> out of 5
+  </div>
+
+  <h1 class="title">
+    Thank you!
+  </h1>
+
+  <p class="article">
+
+    We appreciate you taking the time to give a rating. If you ever need more support,
+    don’t hesitate to get in touch!
+
+  </p>
+
 </div>
+<!-- Thank you state end -->
 
 
 
