--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
 
 <!-- Thank you state start -->
-<div id="cardThanks" class="card">
+<div id="cardThanks" class="card hidden">
 
   <div class="thanks-image"></div>
 
