added main container

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
 
 <body>
 
+<main class="mainContainer">
+
+  
 <!-- Rating state start -->
 <div id="cardRating" class="card ">
 
@@ -117,7 +120,7 @@
 </div>
 <!-- Thank you state end -->
 
-
+</main>
 
 </body>
 
